removing zoom option from idp mobile

--- a/itemDetail.html
+++ b/itemDetail.html
@@ -33,7 +33,7 @@
         <section class="containListingDetail">
             <article class="leftColumn_IDP">
                   <img class="itemImage" alt="" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg">
-                  <div class="viewLarger stdLink">
+                  <div class="viewLarger stdLink excludeFromMobile">
                        view larger image
                   </div>
 
