fullscreen moved to separate CSS file

--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -18,12 +18,13 @@
     <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
+    <link rel="stylesheet" type="text/css" href="css/fullscreen.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
 <body>
-    <section id="shoplocal_container" class="shoplocal_container fullscreen">
+    <section class="shoplocal_container fullscreen">
 
        <main id="bodyContent">
                 
