--- a/footer.html
+++ b/footer.html
@@ -24,17 +24,17 @@
 
 <body>
     <footer class="shoplocal_footer"> <!--begin shoplocal_footer-->
-        <div class="clientFooter excludeFromTablet excludeFromMobile">
+        <section class="clientFooter excludeFromTablet excludeFromMobile">
             Client's footer goes here
-        </div>
-        <div class="sl_seoFooter">
+        </section>
+        <section class="sl_seoFooter">
             <p><a href="#">All Categories</a><span>&nbsp;|&nbsp;</span><a href="#">All Locations</a></p>
             <br>
             <p>Copyright Â© 1999-2015 ShopLocal, LLC. All Rights Reserved.</p>
             <p>Use of this site constitutes acceptance of our <a href="#">Terms of Service</a>.</p>
             <br>
             <p>View our <a href="#">Privacy Notice</a> / <a href="#">Your California Privacy Rights</a>.</p>
-        </div>
+        </section>
     </footer><!--end shoplocal_footer-->
 
 </body>
