--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -24,10 +24,10 @@
 
 <body>
 
-    <section id="shoplocal_container" class="shoplocal_container">
+    <section class="shoplocal_container">
 
          <section class="breadCrumbContain">
-             <a id="BreadCrumb" class="breadcrumb" href="#">Back</a> 
+             <a class="breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
         
            <section class="listViewHeader">
