--- a/globalNav.html
+++ b/globalNav.html
@@ -6,7 +6,7 @@
     <title>Smart Deals Template</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/site_wide.css">
-    <link rel="stylesheet" type="text/css" href="css/button_actions.css">
+    <link rel="stylesheet" type="text/css" href="css/button_styles.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
     <link rel="stylesheet" type="text/css" href="css/entry.css">
