--- a/shoppingList_printTemplate.html
+++ b/shoppingList_printTemplate.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/site_wide.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
-    <link rel="stylesheet" type="text/css" href="css/buttons.css">
+    <link rel="stylesheet" type="text/css" href="css/button_styles.css">
     <link rel="stylesheet" type="text/css" href="css/categorieslisting.css">
     <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
