input/forms CSS stylesheet created and search/send input form updated in all files to share styling

--- a/changelocation.html
+++ b/changelocation.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
+    <link rel="stylesheet" type="text/css" href="css/forms_and_inputs.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
@@ -82,10 +83,10 @@
                
                     <section id="searchStores">
                         <p class="storesNearSearchTitle">Search stores near:</p>
-                        <div class="changeLocation_search_form">
-                           <input type="text" value="Example: Chicago, IL">
-                           <button id="citystatezip_submit" type="submit" class="inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
-          				</div>
+                        <div class="containSearch">
+                            <input type="text" value="Example: Chicago, IL">
+                            <button type="submit"></button>
+                        </div>
                     </section><!--end searchStore-->
             </section><!--end storeLocations-->
             
