--- a/globalNav.html
+++ b/globalNav.html
@@ -19,13 +19,14 @@
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
+    <link rel="stylesheet" type="text/css" href="css/forms_and_inputs.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
 <body>	
     <section id="shoplocal_container" class="shoplocal_container"> <!--begin shoplocal_container-->
     
-        <nav> <!--begin global nav-->
+        <nav class="sl_globalNav"> <!--begin global nav-->
             <div class="globalNav_rowOne">
                     <div class="locationContain_globalNav">
                         <div class="currentAd_contain">
@@ -47,7 +48,7 @@
             <div class="globalNav_rowTwo">
                     <div class="containSearch">
                         <input type="text" value="Search Deals">
-                        <button id="citystatezip_submit" type="submit" class="inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
+                        <button type="submit"></button>
                     </div>
                     <div class="tabsContain">
                         <div class="globalNavTab">Browse Ad Pages</div>
