--- a/noContent.html
+++ b/noContent.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
+    <link rel="stylesheet" type="text/css" href="css/forms_and_inputs.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
@@ -34,7 +35,7 @@
                 </h2>
             
                 <section id="noContentSearch">
-                    <div class="changeLocation_search_form">
+                    <div class="containSearch">
                         <input type="text" value="Example: Chicago, IL">
                         <button id="citystatezip_submit" type="submit" class="inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
