clean up a tags

--- a/BrowseByPage.html
+++ b/BrowseByPage.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             
-            <div class="pageContolContain"> 
+            <div class="pageControlContain"> 
                     <span class="includeInDesktop">Page View:</span>
                     <span class="viewSinglePage stdLink includeInDesktop">Single Page</span> 
                     <span class="includeInDesktop">|</span>  
@@ -88,10 +88,10 @@
             <article id="bbpwrapper">
             </article>
 
-            <button type="button" class="prevPageBtn">
+            <button type="button" class="button prevPageBtn">
                 Previous Page
             </button>
-            <button type="button" class="nextPageBtn">
+            <button type="button" class="button nextPageBtn">
                 Next Page
             </button>
 
