--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             
-            <div class="pageContolContain"> 
+            <div class="pageControlContain"> 
                     <span class="stdLink">Exit Fullscreen</span> 
             </div>
          
@@ -71,10 +71,10 @@
             <article id="bbpwrapper">
             </article>
 
-            <button type="button" class="prevPageBtn">
+            <button type="button" class="button prevPageBtn">
                 Previous Page
             </button>
-            <button type="button" class="nextPageBtn">
+            <button type="button" class="button nextPageBtn">
                 Next Page
             </button>
 
