--- a/changelocation.html
+++ b/changelocation.html
@@ -26,8 +26,8 @@
 <body>
 
     <section id="shoplocal_container" class="shoplocal_container">
-         <section class="breadCrumbContain">
-             <a class="breadcrumb" href="#">Back</a> 
+         <section class="sl_breadcrumbContain">
+             <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
         
         <main id="bodyContent">
@@ -37,8 +37,8 @@
                             <div class="storeInfo">
                                 <p class="storeName">Store Name 1</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                <a><p class="storePhone">(773) 342-9032</p></a>
-                                <button class="secondaryBtn changeLocationBtn">Keep as my store</button>
+                                <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                <button class="button secondaryBtn changeLocationBtn">Keep as my store</button>
                                 <p class="storeHours">Store Hours:</p>
                                 <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
                             </div>
@@ -50,8 +50,8 @@
                                 <div class="storeInfo">
                                     <p class="storeName">Store Name 2</p>
                                     <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                    <a><p class="storePhone">(773) 342-9032</p></a>
-                                    <button class="secondaryBtn changeLocationBtn">Make This My Store</button>
+                                    <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                    <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                                     <p class="storeHours">Store Hours:</p>
                                     <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
                                 </div>
@@ -61,8 +61,8 @@
                                 <div class="storeInfo">
                                     <p class="storeName">Store Name 3</p>
                                     <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                    <a><p class="storePhone">(773) 342-9032</p></a>
-                                    <button class="secondaryBtn changeLocationBtn">Make This My Store</button>
+                                    <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                    <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                                     <p class="storeHours">Store Hours:</p>
                                     <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
                                 </div>
@@ -72,8 +72,8 @@
                                 <div class="storeInfo">
                                     <p class="storeName">Store Name 4</p>
                                     <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                    <a><p class="storePhone">(773) 342-9032</p></a>
-                                    <button class="secondaryBtn changeLocationBtn">Make This My Store</button>
+                                    <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                    <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                                     <p class="storeHours">Store Hours:</p>
                                     <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
                                 </div>
