--- a/footer.html
+++ b/footer.html
@@ -28,12 +28,12 @@
             Client's footer goes here
         </section>
         <section class="sl_seoFooter">
-            <p><a href="#">All Categories</a><span>&nbsp;|&nbsp;</span><a href="#">All Locations</a></p>
+            <p><a class="stdLink" href="#">All Categories</a><span>&nbsp;|&nbsp;</span><a class="stdLink" href="#">All Locations</a></p>
             <br>
             <p>Copyright Â© 1999-2015 ShopLocal, LLC. All Rights Reserved.</p>
-            <p>Use of this site constitutes acceptance of our <a href="#">Terms of Service</a>.</p>
+            <p>Use of this site constitutes acceptance of our <a class="stdLink" href="#">Terms of Service</a>.</p>
             <br>
-            <p>View our <a href="#">Privacy Notice</a> / <a href="#">Your California Privacy Rights</a>.</p>
+            <p>View our <a class="stdLink" href="#">Privacy Notice</a> / <a class="stdLink" href="#">Your California Privacy Rights</a>.</p>
         </section>
     </footer><!--end shoplocal_footer-->
 
