--- a/globalNav.html
+++ b/globalNav.html
@@ -35,7 +35,7 @@
                         </div>
                         <div>
                             <span class="excludeFromMobile">Looking for another location?</span>
-                            <a href="#">Find another store</a>
+                            <a class="stdLink" href="#">Find another store</a>
                         </div>
                     </div>
                 <div class="savedDeals_globalNav">
