--- a/header.html
+++ b/header.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <header class="client_header"> <!--begin client_header-->
-            <a class="clientLogo" href="http://www.Template_ShopLuxe_201301.com/">
-                <img alt="Template_Shopluxe201301 Logo" title="Template_Shopluxe201301 Logo" src="Images/_Template_ShopLuxe_sprite_LOGOS.png">
+            <a class="clientLogo stdLink" href="http://www.Template_ShopLuxe_201301.com/">
+                <img alt="Client Logo" title="Client Logo" src="Images/client_logo.png">
             </a>
     </header><!--end client_header-->
 </body>
