--- a/herobanner.html
+++ b/herobanner.html
@@ -30,7 +30,7 @@
                     <div class="scrollerWrapper">
                         <div class="heroBannerSlide">
                             <div>
-                                <a href="#">
+                                <a class="stdLink" href="#">
                                     <img class="filler" src="">
                                 </a>
                             </div>
@@ -38,9 +38,9 @@
                     </div>
                 </div>
                 <div class="slideIndicator">
-                    <a></a>
-                    <a></a>
-                    <a class="active"></a>
+                    <a class="stdLink"></a>
+                    <a class="stdLink"></a>
+                    <a class="stdLink active"></a>
                 </div>  
                     <button type="button" class="heroPrev">Previous</button>
                     <button type="button" class="heroNext">Next</button>
