--- a/noContent.html
+++ b/noContent.html
@@ -37,7 +37,7 @@
                 <section id="noContentSearch">
                     <div class="containSearch">
                         <input type="text" value="Example: Chicago, IL">
-                        <button id="citystatezip_submit" type="submit" class="inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
+                        <button id="citystatezip_submit" type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
                 </section><!--end noContentSearch-->
             </div><!--end noContentTopContain-->
@@ -56,12 +56,13 @@
                             61108
                         </p>
                         <div class="storePhone">
-                            <a href="tel:(815) - 262-0837">
+                            <a class="stdLink" href="tel:(815) - 262-0837">
                                 (815) 262-0837
                             </a>
                         </div>
-                        <a ng-click="changeStoreClicked()" ng-href="#!/store/{{store.ID}}">
-                        <button type="button" class="secondaryBtn noContentButton">Make this my store</button></a>
+                        <a class="stdLink">
+                        	<button type="button" class="button secondaryBtn noContentButton">Make this my store</button>
+                        </a>
                     </div>
                     <div class="cb"></div>
                  </article>
@@ -75,11 +76,11 @@
                             61108
                         </p>
                         <div class="storePhone">
-                            <a href="tel:(815) - 262-0837">
+                            <a class="stdLink" href="tel:(815) - 262-0837">
                                 (815) 262-0837
                             </a>
                         </div>
-                        <button type="button" class="secondaryBtn noContentButton">Make this my store</button></a>
+                        <button type="button" class="button secondaryBtn noContentButton">Make this my store</button></a>
                     </div>
                      <div class="cb"></div>
                     </article>
