--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -27,16 +27,16 @@
 
     <section class="shoplocal_container">
 
-         <section class="breadCrumbContain">
-             <a class="breadcrumb" href="#">Back</a> 
+         <section class="sl_breadcrumbContain">
+             <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
         
            <section class="listViewHeader">
                 <h1 class="savedDealsLabel">Saved Deals</h1>
                 <div class="listOptions">
-                    <a class="removeallLink">Remove All</a>
-                    <a class="printList">Print List</a>
-                    <a class="emailList">Email List</a>
+                    <a class="stdLink removeallLink">Remove All</a>
+                    <a class="stdLink printList">Print List</a>
+                    <a class="stdLink emailList">Email List</a>
                 </div> 
            </section>
            
@@ -65,8 +65,8 @@
                     </div>
                     <div class="cb"></div>
                     <div class="listingButtons">
-                        <button class="primaryBtn">Shop now</button>
-                        <button class="secondaryBtn">View details</button>
+                        <button class="button primaryBtn">Shop now</button>
+                        <button class="button secondaryBtn">View details</button>
                     </div>
                 </article><!--end listingTile-->
                 <article class="listingTile">
@@ -83,8 +83,8 @@
                      </div>
                      <div class="cb"></div>
                      <div class="listingButtons">
-                        <button class="primaryBtn">Shop now</button>
-                        <button class="secondaryBtn">View details</button>
+                        <button class="button primaryBtn">Shop now</button>
+                        <button class="button secondaryBtn">View details</button>
                     </div>
                 </article><!--end listingTile-->
                 <article class="listingTile">
@@ -101,8 +101,8 @@
                     </div>
                     <div class="cb"></div>
                     <div class="listingButtons">
-                        <button class="primaryBtn">Shop now</button>
-                        <button class="secondaryBtn">View details</button>
+                        <button class="button primaryBtn">Shop now</button>
+                        <button class="button secondaryBtn">View details</button>
                     </div>
                 </article><!--end listingTile-->
                 <article class="listingTile">
@@ -119,8 +119,8 @@
                     </div>
                     <div class="cb"></div>
                     <div class="listingButtons">
-                        <button class="primaryBtn">Shop now</button>
-                        <button class="secondaryBtn">View details</button>
+                        <button class="button primaryBtn">Shop now</button>
+                        <button class="button secondaryBtn">View details</button>
                     </div>
                 </article><!--end listingTile-->
  
