--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -72,8 +72,8 @@
                 </div>
                 <div class="cb"></div>
                 <div class="listingButtons">
-                    <button class="primaryBtn">Shop now</button>
-                    <button class="secondaryBtn">View details</button>
+                    <button class="button primaryBtn">Shop now</button>
+                    <button class="button secondaryBtn">View details</button>
                 </div>
             </article><!--end listingTile-->
           <div class="cb"></div>
