--- a/herobanner.html
+++ b/herobanner.html
@@ -6,7 +6,7 @@
     <title>Smart Deals Template</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/site_wide.css">
-    <link rel="stylesheet" type="text/css" href="css/button_styles.css">
+    <link rel="stylesheet" type="text/css" href="css/buttons_and_icons.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
     <link rel="stylesheet" type="text/css" href="css/entry.css">
@@ -42,8 +42,8 @@
                     <a class="stdLink"></a>
                     <a class="stdLink active"></a>
                 </div>  
-                    <button type="button" class="heroPrev">Previous</button>
-                    <button type="button" class="heroNext">Next</button>
+                    <button type="button" class="button heroPrev">Previous</button>
+                    <button type="button" class="button heroNext">Next</button>
         </aside><!--end Hero banner-->
 
   	<div class="cb"></div>
