--- a/BrowseByPage.html
+++ b/BrowseByPage.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <section id="shoplocal_container" class="shoplocal_container">
+    <main class="shoplocal_container">
 
         <section class="adSelector">
             <div class="nowViewingLabel">
@@ -85,7 +85,7 @@
        <div class="cb"></div>
         
         <section id="PageViewContain" class="excludeFromMobile">
-            <article id="bbpwrapper">
+            <article class="bbpwrapper">
             </article>
 
             <button type="button" class="button prevPageBtn">
