--- a/globalNav.html
+++ b/globalNav.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>	
-    <section id="shoplocal_container" class="shoplocal_container"> <!--begin shoplocal_container-->
+    <main class="shoplocal_container"> <!--begin shoplocal_container-->
     
         <nav class="sl_globalNav"> <!--begin global nav-->
             <div class="globalNav_rowOne">
@@ -58,7 +58,7 @@
             </div>
         </nav><!--end global nav-->
 
-    </section><!--end shoplocal_container-->
+    </main><!--end shoplocal_container-->
   	
 </body>
 </html>
