--- a/itemDetail.html
+++ b/itemDetail.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <section id="shoplocal_container" class="shoplocal_container">
+    <main class="shoplocal_container">
         
          <section class="sl_breadcrumbContain includeInMobile">
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
@@ -111,8 +111,7 @@
         </section><!--end containListingDetail-->
 
         <div class="cb"></div>
-
-      </section><!--end shoplocal_container-->
+      </main><!--end shoplocal_container-->
 
 </body>
 </html>
