--- a/noContent.html
+++ b/noContent.html
@@ -25,9 +25,9 @@
 
 <body>
    
-    <section id="shoplocal_container" class="shoplocal_container">
+    <main class="shoplocal_container">
     
-        <div id="noContent">
+        <div id="NoContent">
             <div class="noContentTopContain">
                 <h2>There are no deals available for this location.</h2>
                 <h2 class="anotherLocation">
@@ -88,7 +88,7 @@
             </section> 
         </div>
         
-    </section><!--end shoplocal_container-->
+    </main><!--end shoplocal_container-->
 
 </body>
 </html>
