--- a/herobanner.html
+++ b/herobanner.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <section id="shoplocal_container" class="shoplocal_container"> <!--begin shoplocal_container-->
+    <main class="shoplocal_container"> <!--begin shoplocal_container-->
 
          <aside class="heroBannerContain excludeFromMobile"> <!--begin Hero banner-->
                 <div>            
@@ -48,7 +48,7 @@
 
   	<div class="cb"></div>
         
-    </section><!--end shoplocal_container-->
+    </main><!--end shoplocal_container-->
 
 </body>
 </html>
