--- a/landing.html
+++ b/landing.html
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-    <section id="shoplocal_container" class="shoplocal_container">
+    <main class="shoplocal_container">
 
-            <section id="LandingContain" class="landingContain">
+            <section id="LandingContain">
 
               <section class="landingPageControls">
               	<article class="categoryDropdown">
@@ -55,9 +55,7 @@
                               <p class="countNumber">4</p>
                               <p>DEALS</p>
                           </div>
-                          <div class="imageContain">
-                              <img src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
-                          </div>
+                              <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
                           <h2>
                               House & Home
                           </h2>
@@ -69,9 +67,7 @@
                                   <p class="countNumber">1</p>
                                   <p>DEAL</p>
                               </div>
-                          <div class="imageContain">
-                              <img src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
-                          </div>
+                              <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
                           <h2>
                               Clothing
                           </h2>
@@ -82,9 +78,7 @@
                                    <p class="countNumber">10</p>
                                    <p>DEALS</p>
                               </div>
-                              <div class="imageContain">
-                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                              </div>
+                                  <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
                               <h2>
                                   Automotive
                               </h2>
@@ -95,9 +89,7 @@
                               <p class="countNumber">6</p>
                               <p>DEALS</p>
                       </div>
-                      <div class="imageContain">
-                          <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                      </div>
+                          <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
                       <h2>
                           Kitchen
                       </h2>
@@ -116,9 +108,7 @@
                                   <p>DEALS</p>
                       			</div>
                             </div>
-                            <div class="imageContain">
-                                <img src="http://akimages.shoplocal.com/dyn_rppi/420.0.80.0/HomeDepot/large/0001_STA052514_bP1_h4lz0.jpg">
-                            </div>
+                                <img class="imageContain"src="http://akimages.shoplocal.com/dyn_rppi/420.0.80.0/HomeDepot/large/0001_STA052514_bP1_h4lz0.jpg">
                         </div>
                       <div class="ss_holder">
                       <div class="topBlock">
@@ -137,9 +127,7 @@
                                      <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
                                 </div>
                             </div>
-                            <div class="imageContain">
-                                <img src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
-                            </div>
+                                <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
                         </div>
                       </div>
                           <div class="smallBlock">
@@ -147,9 +135,7 @@
                                    <p class="countNumber">10</p>
                                    <p>DEALS</p>
                               </div>
-                              <div class="imageContain">
-                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                              </div>
+                                  <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
                               <h2>
                                   Automotive
                               </h2>
@@ -160,9 +146,7 @@
                               <p class="countNumber">6</p>
                               <p>DEALS</p>
                       </div>
-                      <div class="imageContain">
-                          <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                      </div>
+                          <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
                       <h2>
                           Kitchen
                       </h2>
@@ -177,9 +161,7 @@
                                    <p class="countNumber">10</p>
                                    <p>DEALS</p>
                               </div>
-                              <div class="imageContain">
-                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                              </div>
+                                  <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
                               <h2>
                                   Automotive
                               </h2>
@@ -204,9 +186,7 @@
                                     <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
                                 </div>
                             </div>
-                            <div class="imageContain">
-                                <img src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
-                            </div>
+                                <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
                         </div>
                     </div>
                     <div class="firstMod topBlock"> 
@@ -215,9 +195,7 @@
                                    <p class="countNumber">10</p>
                                    <p>DEALS</p>
                               </div>
-                              <div class="imageContain">
-                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                              </div>
+                                  <img class="imageContain"src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
                               <h2>
                                   Automotive
                               </h2>
@@ -231,7 +209,7 @@
         
         </section><!--end landingContain-->
 
-    </section><!--end shoplocal_container-->
+    </main><!--end shoplocal_container-->
 
 </body>
 </html>
