--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <section class="shoplocal_container">
+    <main class="shoplocal_container">
 
          <section class="sl_breadcrumbContain">
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
@@ -127,7 +127,7 @@
             </section><!--end listinsContain-->
             <div class="cb"></div>
         
-    </section><!--end shoplocal_container-->
+    </main><!--end shoplocal_container-->
 
 </body>
 </html>
