--- a/interior.html
+++ b/interior.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
+    <link rel="stylesheet" type="text/css" href="css/listingTile.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
