--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/landing.css">
     <link rel="stylesheet" type="text/css" href="css/bbpage.css">
     <link rel="stylesheet" type="text/css" href="css/bblisting.css">
+    <link rel="stylesheet" type="text/css" href="css/dropdown.css">
     <link rel="stylesheet" type="text/css" href="css/bbpage.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
