--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -58,7 +58,7 @@
             <div id="toggleMin" class="zoomIcon top" style="display: none;"></div>
         </section>
         
-        <section id="listingsContain">
+        <section id="ListingsContain">
           <article class="listingTile">
                 <img class="listingImage" alt="#" src="images/150118_02AD_cmb_1.jpg">
                 <div class="listingInfo">
