--- a/changelocation.html
+++ b/changelocation.html
@@ -25,13 +25,11 @@
 
 <body>
 
-    <section id="shoplocal_container" class="shoplocal_container">
+    <main class="shoplocal_container">
          <section class="sl_breadcrumbContain">
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
-        
-        <main id="bodyContent">
-            <section id="storeLocations">
+            <section id="StoreLocations">
                     <article id="myStore">
                         <p class="locationTitle">My Store</p>
                             <div class="storeInfo">
