--- a/changelocation.html
+++ b/changelocation.html
@@ -79,14 +79,14 @@
                             </div>
                     </article><!--end storesNearby-->
                
-                    <section id="SearchStores">
+                    <article id="SearchStores">
                         <p class="storesNearSearchTitle">Search stores near:</p>
                         <div class="containSearch">
                             <input type="text" value="Example: Chicago, IL">
                             <button type="submit"></button>
                         </div>
-                    </section><!--end searchStore-->
-            </section><!--end storeLocations-->
+                    </article><!--end searchStore-->
+                </section><!--end storeLocations-->
     	</main><!--end shoplocal_container-->
   	    <div class="cb"></div> 
      
