dropdown css part 1 - NOT COMPLETE

--- a/BrowseByPage.html
+++ b/BrowseByPage.html
@@ -26,16 +26,15 @@
     <main class="shoplocal_container">
 
         <section class="adSelector">
-            <div class="nowViewingLabel">
-               Now Viewing:
+            <div class="categoryViewingLabel">
+                       Viewing:
             </div>
-            <div class="containNowViewingOptions">
-                  <div class="nowViewingOption">
-                        Weekly Ad Title
-                  </div>
-                  <div class="posDropdownTriangle skinDropdownTriangle"></div>
+            <div class="containOptions">
+                 <div class="categoryOption">
+                       Weekly Ad Number 1
+                 </div>
+                <div class="posDropdownTriangle skinDropdownTriangle"></div>
             </div>
-            <div class="cb"></div>
         </section><!-- end adSelector -->
                 
         <section class="bbpNavContain excludeFromMobile">
@@ -43,8 +42,8 @@
                   Valid Jan 15 - Jan 25 (except as noted)
             </div>
      
-            <div class="containPageSortOptions">     
-                <div class="activePageSortOption">
+            <div class="containOptions">     
+                <div class="activeOption">
                    Page 1 of 23
                 </div>
                 <div class="pageDropdownOptions">
