--- a/interior.html
+++ b/interior.html
@@ -37,7 +37,7 @@
                     <div class="categoryViewingLabel">
                        Viewing:
                     </div>
-                    <div class="containCategoryOptions">
+                    <div class="containOptions">
                           <div class="categoryOption">
                                 All Categories
                           </div>
@@ -50,10 +50,10 @@
                        Sort By:
                     </div>
                     <div class="containSortOptions">
-                          <div class="sortOption">
+                          <div class="activeOption">
                                 Popularity
                           </div>
-                          <div class="posSortDropdownTriangle skinDropdownTriangle"></div>
+                          <div class="posDropdownTriangle skinDropdownTriangle"></div>
                     </div>
                 </article><!-- end rightNav-->
             </section><!--end interior_subNav-->
