--- a/landing.html
+++ b/landing.html
@@ -32,11 +32,11 @@
                     <div class="categoryViewingLabel">
                        Viewing:
                     </div>
-                    <div class="containCategoryOptions">
-                          <div class="categoryOption">
+                    <div class="containOptions">
+                          <div class="activeOption">
                                 All Categories
                           </div>
-                          <div class="posCategoryDropdownTriangle skinDropdownTriangle"></div>
+                          <div class="posDropdownTriangle skinDropdownTriangle"></div>
                     </div>
         		</article><!-- end categoryDropdown -->
                
