--- a/helpOverlay.html
+++ b/helpOverlay.html
@@ -105,7 +105,7 @@
             </div>
         </nav><!--end global nav-->
         
-            <section id="LandingContain" class="landingContain">
+            <section id="LandingContain">
 
               <section class="landingPageControls">
               	<article class="categoryDropdown">
