--- a/noContent.html
+++ b/noContent.html
@@ -34,7 +34,7 @@
                     Please enter another <span class="bold">City</span>, <span class="bold">State</span> or <span class="bold">Zip Code</span>.
                 </h2>
             
-                <section id="noContentSearch">
+                <section>
                     <div class="containSearch">
                         <input type="text" value="Example: Chicago, IL">
                         <button id="citystatezip_submit" type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
