--- a/noContent.html
+++ b/noContent.html
@@ -37,7 +37,7 @@
                 <section>
                     <div class="containSearch">
                         <input type="text" value="Example: Chicago, IL">
-                        <button id="citystatezip_submit" type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
+                        <button type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
                 </section><!--end noContentSearch-->
             </div><!--end noContentTopContain-->
