--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -50,11 +50,9 @@
               </form>
            </section>
            
-            <section id="listingsContain">
+            <section id="ListingsContain">
                 <article class="listingTile">
-                    <div class="listingImage">
-                        <img alt="#" src="images/150118_02AD_cmb_1.jpg">
-                    </div>
+                    <img class="listingImage" alt="#" src="images/150118_02AD_cmb_1.jpg">
                     <div class="listingInfo">
                         <div class="theDeal"></div>
                         <p class="listingTitle">Tek Gear® media-pocket tees for men</p>
@@ -70,9 +68,7 @@
                     </div>
                 </article><!--end listingTile-->
                 <article class="listingTile">
-                     <div class="listingImage">
-                        <img alt="#" src="images/150118_02AD_cmb_1.jpg">
-                    </div>
+                    <img class="listingImage" alt="#" src="images/150118_02AD_cmb_1.jpg">
                     <div class="listingInfo">
                         <div class="theDeal"></div>
                         <p class="listingTitle">Tek Gear® media-pocket tees for men</p>
@@ -88,9 +84,7 @@
                     </div>
                 </article><!--end listingTile-->
                 <article class="listingTile">
-                     <div class="listingImage">
-                        <img alt="#" src="images/150118_02AD_cmb_1.jpg">
-                    </div>
+                    <img class="listingImage" alt="#" src="images/150118_02AD_cmb_1.jpg">
                     <div class="listingInfo">
                         <div class="theDeal">50-60% off</div>
                         <p class="listingTitle">Tek Gear® media-pocket tees for men</p>
@@ -106,9 +100,7 @@
                     </div>
                 </article><!--end listingTile-->
                 <article class="listingTile">
-                     <div class="listingImage">
-                        <img alt="#" src="images/150118_02AD_cmb_1.jpg">
-                    </div>
+                    <img class="listingImage" alt="#" src="images/150118_02AD_cmb_1.jpg">
                     <div class="listingInfo">
                         <div class="theDeal">50-60% off</div>
                         <p class="listingTitle">Tek Gear® media-pocket tees for men</p>
